Update release notes, fixes #1930